--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
+    "build": "babel src -d dist",
+    "start": "npm run build && node dist/index.js",
+    "test": "node --experimental-vm-modules  node_modules/jest/bin/jest.js --env=node --coverage",
     "dev": "node api.js"
   },
   "repository": {
@@ -30,9 +31,14 @@
     "@babel/preset-env": "^7.16.11"
   },
   "dependencies": {
+    "babel-jest": "^27.5.1",
+    "chalk": "^5.0.0",
+    "eslint": "^8.8.0",
     "fs": "^0.0.1-security",
+    "jest": "^27.5.1",
     "jsdom": "^19.0.0",
     "marked": "^4.0.12",
+    "node-fetch": "^3.2.0",
     "path": "^0.12.7"
   }
 }
