--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "md-links",
+  "name": "mq-links",
   "version": "0.1.0",
-  "description": "* [1. Preámbulo](#1-preámbulo)\r * [2. Resumen del proyecto](#2-resumen-del-proyecto)\r * [3. Objetivos de aprendizaje](#3-objetivos-de-aprendizaje)\r * [4. Consideraciones generales](#4-consideraciones-generales)\r * [5. Criterios de aceptación mínimos del proyecto](#5-criterios-de-aceptación-mínimos-del-proyecto)\r * [6. Entregables](#6-entregables)\r * [7. Hacker edition](#7-hacker-edition)\r * [8. Pistas, tips y lecturas complementarias](#8-pistas-tips-y-lecturas-complementarias)\r * [9. Checklist](#9-checklist)\r * [10. Achicando el problema](#10-achicando-el-problema)",
+  "description": "Library that allows you to see the status of your links contained in your markdown files along with some statistics.",
   "bin": {
     "mq-links": "cli.js"
+  },
+  "publishConfig": {
+    "access": "public"
   },
   "main": "cli.js",
   "type": "module",
@@ -16,9 +19,6 @@
     "test": "node --experimental-vm-modules  node_modules/jest/bin/jest.js --env=node --coverage",
     "dev": "node api.js"
   },
-
-  
-
   "repository": {
     "type": "git",
     "url": "git+https://github.com/JenyferMarquez/LIM016-md-links.git"
@@ -27,7 +27,7 @@
   "author": "Jenyfer Márquez",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/JenyferMarquez/LIM016-md-links/issues"
+    "url": "https://github.com/JenyferMarquez/LIM016-md-links"
   },
   "homepage": "https://github.com/JenyferMarquez/LIM016-md-links#readme",
   "devDependencies": {
@@ -35,6 +35,7 @@
     "@babel/core": "^7.17.2",
     "@babel/node": "^7.16.8",
     "@babel/preset-env": "^7.16.11",
+    "fetch-mock": "^9.11.0",
     "jest-fetch-mock": "^3.0.3"
   },
   "dependencies": {
